Added a rules page

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,15 @@
         <nav class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1 id="logo">Board Game</h1>
+                    <h1 id="logo">Board Game
+                        <span id="rules">
+                            <a href="./rules.html">How to Play</a></span>
+                    </h1>
+                   
                 </div>
             </div>
         </nav>
+    </header>
         <section class="container-fluid">
             <div class="row">
                 <div class="col-3 ml-auto" id="player1">
@@ -30,7 +35,7 @@
                         <img class="card-img-top" height="300px" width="300px" src="./images/player1.png"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Player 1</h5>
+                            <h5 class="card-title">Josh</h5>
                             <p class="card-text"></p>
                         </div>
                         <ul class="list-group list-group-flush">
@@ -58,7 +63,7 @@
                         <img class="card-img-top" height="300px" width="290px" src="./images/player2.png"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Player 2</h5>
+                            <h5 class="card-title">Hazel</h5>
                             <p class="card-text"></p>
                         </div>
                         <ul class="list-group list-group-flush">
@@ -83,6 +88,6 @@
                 <div class="col-12" style="text-align:center ;">OC</div>
             </div>
         </footer>
-    </header>
+    
 
 </html>
