fixed when user moves to a weapon cell

--- a/src/rules.html
+++ b/src/rules.html
@@ -56,7 +56,8 @@
                         <li>There is a 10x10 Grid for player movements.</li>
                         <li>There are a total of <b>10 obstacles</b> and <b>4 different weapons</b>, randomly placed on
                             the grid.</li>
-                        <li>The players can move freely in all four directions (up,down,right,left) except diagonally.
+                        <li>Both the players start with 100% health.The players can move freely in all four directions
+                            (up,down,right,left) except diagonally.
                         </li>
                         <li>If there are any obstacles in the way of the player, it can not move past the obstacle and
                             the movements would be
@@ -65,6 +66,16 @@
                         <li>If the player moves to the tile, where a weapon is placed, the player's weapon will be
                             swapped.</li>
                         <li>If both the players come next to each other, the fight will start!</li>
+                    </ul>
+                    <h2>Fight Sequence</h2>
+                    <ul>
+                        <li>The fight starts with the player who didn't make the last move.</li>
+                        <li>Each player can either Attack the other player or Defend.</li>
+                        <li>If the Player chooses to attack, the other player health will decrease by the attacking player's weapon.</li>
+                        <li>However, if the other player chooses to defend, his health would only be decreased by half the damage of the attacking player's 
+                            weapon.
+                        </li>
+                        <li></li>
                     </ul>
                     <h2>Players</h2>
                 </div>
@@ -76,11 +87,12 @@
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Josh</h5>
-                            <p class="card-text">Josh has been trained as an assasin since he was just 7 years old. He is sharp, clever 
+                            <p class="card-text">Josh has been trained as an assasin since he was just 7 years old. He
+                                is sharp, clever
                                 and lethal with a dagger!
                             </p>
                         </div>
-                
+
 
                     </div>
                 </div>
@@ -90,11 +102,12 @@
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Hazel</h5>
-                            <p class="card-text">Hazel's life became horrible when he lost his entire family to a group of assasins at an age of just 5. 
+                            <p class="card-text">Hazel's life became horrible when he lost his entire family to a group
+                                of assasins at an age of just 5.
                                 Now he just wants his revenge! He is good with RPGs and grenades!
                             </p>
                         </div>
-                
+
 
                     </div>
                 </div>
