--- a/src/rules.html
+++ b/src/rules.html
@@ -87,7 +87,7 @@
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Josh</h5>
-                            <p class="card-text">Josh has been trained as an assasin since he was just 7 years old. He
+                            <p class="card-text">Josh has been trained as an assassin since he was just 7 years old. He
                                 is sharp, clever
                                 and lethal with a dagger!
                             </p>
@@ -103,7 +103,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Hazel</h5>
                             <p class="card-text">Hazel's life became horrible when he lost his entire family to a group
-                                of assasins at an age of just 5.
+                                of assassins at an age of just 5.
                                 Now he just wants his revenge! He is good with RPGs and grenades!
                             </p>
                         </div>
